# torrentai

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
docs/: semantic-llm.md  web-interface.md
src/: downloader.rs  llm_service.rs  main.rs  models.rs  pirate_bay_scraper.rs  prompts.rs  scraper.rs  smart_search.rs  yts_scraper.rs
