[package]
name = "torrentai"
version = "0.1.0"
edition = "2021"

[dependencies]
librqbit = "8.0"
tokio = { version = "1", features = ["full", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ollama-rs = "0.3.2"
futures = "0.3"
lazy_static = "1.4"
regex = "1.10"
chrono = "0.4"
urlencoding = "2.1"

